// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render ReviewForm With error 1`] = `
<form
  action="#"
  className="add-review__form"
  onSubmit={[Function]}
>
  <p
    style={
      Object {
        "fontSize": "35px",
        "textAlign": "center",
      }
    }
  >
    Something went wrong! Try again
  </p>
  <div
    className="rating"
  >
    <div
      className="rating__stars"
    >
      <input
        checked={false}
        className="rating__input"
        disabled={false}
        id="star-1"
        name="rating"
        onChange={[Function]}
        type="radio"
        value="1"
      />
      <label
        className="rating__label"
        htmlFor="star-1"
      >
        Rating 
        1
      </label>
      <input
        checked={false}
        className="rating__input"
        disabled={false}
        id="star-2"
        name="rating"
        onChange={[Function]}
        type="radio"
        value="2"
      />
      <label
        className="rating__label"
        htmlFor="star-2"
      >
        Rating 
        2
      </label>
      <input
        checked={false}
        className="rating__input"
        disabled={false}
        id="star-3"
        name="rating"
        onChange={[Function]}
        type="radio"
        value="3"
      />
      <label
        className="rating__label"
        htmlFor="star-3"
      >
        Rating 
        3
      </label>
      <input
        checked={false}
        className="rating__input"
        disabled={false}
        id="star-4"
        name="rating"
        onChange={[Function]}
        type="radio"
        value="4"
      />
      <label
        className="rating__label"
        htmlFor="star-4"
      >
        Rating 
        4
      </label>
      <input
        checked={true}
        className="rating__input"
        disabled={false}
        id="star-5"
        name="rating"
        onChange={[Function]}
        type="radio"
        value="5"
      />
      <label
        className="rating__label"
        htmlFor="star-5"
      >
        Rating 
        5
      </label>
    </div>
  </div>
  <div
    className="add-review__text"
  >
    <textarea
      className="add-review__textarea"
      disabled={false}
      id="review-text"
      name="review-text"
      onChange={[Function]}
      placeholder="Review text"
      value="fine to watch"
    />
    <div
      className="add-review__submit"
    >
      <button
        className="add-review__btn"
        disabled={true}
        type="submit"
      >
        Post
      </button>
    </div>
  </div>
</form>
`;

exports[`Render ReviewForm Without error 1`] = `
<form
  action="#"
  className="add-review__form"
  onSubmit={[Function]}
>
  
  <div
    className="rating"
  >
    <div
      className="rating__stars"
    >
      <input
        checked={false}
        className="rating__input"
        disabled={false}
        id="star-1"
        name="rating"
        onChange={[Function]}
        type="radio"
        value="1"
      />
      <label
        className="rating__label"
        htmlFor="star-1"
      >
        Rating 
        1
      </label>
      <input
        checked={false}
        className="rating__input"
        disabled={false}
        id="star-2"
        name="rating"
        onChange={[Function]}
        type="radio"
        value="2"
      />
      <label
        className="rating__label"
        htmlFor="star-2"
      >
        Rating 
        2
      </label>
      <input
        checked={false}
        className="rating__input"
        disabled={false}
        id="star-3"
        name="rating"
        onChange={[Function]}
        type="radio"
        value="3"
      />
      <label
        className="rating__label"
        htmlFor="star-3"
      >
        Rating 
        3
      </label>
      <input
        checked={false}
        className="rating__input"
        disabled={false}
        id="star-4"
        name="rating"
        onChange={[Function]}
        type="radio"
        value="4"
      />
      <label
        className="rating__label"
        htmlFor="star-4"
      >
        Rating 
        4
      </label>
      <input
        checked={true}
        className="rating__input"
        disabled={false}
        id="star-5"
        name="rating"
        onChange={[Function]}
        type="radio"
        value="5"
      />
      <label
        className="rating__label"
        htmlFor="star-5"
      >
        Rating 
        5
      </label>
    </div>
  </div>
  <div
    className="add-review__text"
  >
    <textarea
      className="add-review__textarea"
      disabled={false}
      id="review-text"
      name="review-text"
      onChange={[Function]}
      placeholder="Review text"
      value="oks to watch"
    />
    <div
      className="add-review__submit"
    >
      <button
        className="add-review__btn"
        disabled={true}
        type="submit"
      >
        Post
      </button>
    </div>
  </div>
</form>
`;
